Fix wrap for extra small screens

--- a/src/components/UserCard/UserCard.module.scss
+++ b/src/components/UserCard/UserCard.module.scss
@@ -69,6 +69,7 @@
       display: flex;
       gap: 25px;
       margin-bottom: 37px;
+      flex-wrap: wrap;
 
       justify-content: space-between;
       background: var(--body_bg_color);
@@ -122,6 +123,7 @@
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
+      flex-wrap: wrap;
       @include mq(1024px) {
         gap: 41px;
         justify-content: left;
@@ -216,6 +218,7 @@
     .user_contact {
       display: flex;
       align-items: center;
+      flex-wrap: wrap;
 
       p,
       a {
